Modificación interfaz e implementación
Modificación interfaz e implementación

--- a/Android/app/src/main/res/layout/activity_actualizar_cliente.xml
+++ b/Android/app/src/main/res/layout/activity_actualizar_cliente.xml
@@ -41,31 +41,21 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.3" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout5"
+    <TextView
+        android:id="@+id/edt_nombre_actualizar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:gravity="center"
+        android:gravity="center_horizontal"
+        android:inputType="text"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        app:layout_constraintVertical_bias="0.373">
-
-        <EditText
-            android:id="@+id/edt_nombre_actualizar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_user_color"
-            android:drawablePadding="5dp"
-            android:inputType="text" />
-
-    </android.support.design.widget.TextInputLayout>
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout3"
@@ -85,6 +75,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_correo"
             android:drawablePadding="5dp"
+            android:hint="@string/edt_correo_cliente"
             android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
@@ -107,6 +98,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_telefono"
             android:drawablePadding="5dp"
+            android:hint="@string/edt_telefono_cliente"
             android:inputType="number" />
 
     </android.support.design.widget.TextInputLayout>
@@ -129,7 +121,7 @@
         android:onClick="btn_actualizar_cliente"
         android:text="Actualizar cliente"
         android:textSize="18sp"
-        android:theme="@style/boton_principal"
+        android:theme="@style/boton_rojo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
