--- a/Android/app/src/main/res/layout/activity_registrar_automovil.xml
+++ b/Android/app/src/main/res/layout/activity_registrar_automovil.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".Registrar.RegistrarAutomovilActivity">
-android:fillViewport="true">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    tools:context=".Registrar.RegistrarAutomovilActivity">
+    android:fillViewport="true">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -25,9 +26,9 @@ android:fillViewport="true">
             android:id="@+id/textInputLayout5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
@@ -40,8 +41,9 @@ android:fillViewport="true">
                 android:id="@+id/edt_placa_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawablePadding="5dp"
-                android:hint="Placa del automovil"
+                android:drawableStart="@drawable/ic_placa"
+                android:drawablePadding="15dp"
+                android:hint="@string/edt_placa"
                 android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
@@ -50,8 +52,8 @@ android:fillViewport="true">
             android:id="@+id/textInputLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,8 +64,9 @@ android:fillViewport="true">
                 android:id="@+id/edt_marca_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawablePadding="5dp"
-                android:hint="Marca del automovil"
+                android:drawableStart="@drawable/ic_marca"
+                android:drawablePadding="15dp"
+                android:hint="@string/edt_marca"
                 android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
@@ -72,8 +75,8 @@ android:fillViewport="true">
             android:id="@+id/textInputLayout4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
             app:layout_constraintEnd_toEndOf="parent"
@@ -84,8 +87,9 @@ android:fillViewport="true">
                 android:id="@+id/edt_linea_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawablePadding="5dp"
-                android:hint="Linea del automovil"
+                android:drawableStart="@drawable/ic_linea"
+                android:drawablePadding="15dp"
+                android:hint="@string/edt_linea"
                 android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
@@ -94,8 +98,8 @@ android:fillViewport="true">
             android:id="@+id/textInputLayout6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
             app:layout_constraintEnd_toEndOf="parent"
@@ -106,8 +110,9 @@ android:fillViewport="true">
                 android:id="@+id/edt_modelo_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawablePadding="5dp"
-                android:hint="Modelo del automovil"
+                android:drawableStart="@drawable/ic_modelo"
+                android:drawablePadding="15dp"
+                android:hint="@string/edt_modelo"
                 android:inputType="number" />
 
         </android.support.design.widget.TextInputLayout>
@@ -116,8 +121,8 @@ android:fillViewport="true">
             android:id="@+id/textInputLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline11"
             app:layout_constraintEnd_toEndOf="parent"
@@ -128,8 +133,9 @@ android:fillViewport="true">
                 android:id="@+id/edt_color_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawablePadding="5dp"
-                android:hint="Color del automovil"
+                android:drawableStart="@drawable/ic_color_coche"
+                android:drawablePadding="15dp"
+                android:hint="@string/edt_color"
                 android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
@@ -138,14 +144,14 @@ android:fillViewport="true">
             android:id="@+id/btn_registrar_automovil"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="24dp"
             android:onClick="btn_agregar_automovil"
-            android:text="Agregar Automovil"
+            android:text="@string/btn_agrager_automovil"
             android:textSize="18sp"
-            android:theme="@style/boton_principal"
+            android:theme="@style/boton_rojo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
