--- a/Android/app/src/main/res/layout/automovil.xml
+++ b/Android/app/src/main/res/layout/automovil.xml
@@ -20,15 +20,13 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
-            android:drawableLeft="@drawable/ic_license_plate"
-            android:drawablePadding="5dp"
+            android:drawableLeft="@drawable/ic_placa"
+            android:drawablePadding="15dp"
             android:fontFamily="@font/roboto"
             android:gravity="left"
             android:text="placa"
             android:textColor="@android:color/black"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/txv_automovil_marca"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,31 +35,33 @@
             android:id="@+id/txv_automovil_marca"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
-            android:drawableLeft="@drawable/ic_correo"
-            android:drawablePadding="5dp"
+            android:drawableLeft="@drawable/ic_marca"
+            android:drawablePadding="15dp"
             android:text="marca"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toTopOf="@+id/txv_automovil_linea"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline3" />
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/txv_automovil_placa" />
 
         <TextView
             android:id="@+id/txv_automovil_linea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:drawableLeft="@drawable/ic_telefono"
-            android:drawablePadding="5dp"
+            android:drawableLeft="@drawable/ic_modelo"
+            android:drawablePadding="15dp"
             android:text="modelo"
-            android:textSize="12sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline3" />
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/txv_automovil_marca" />
 
         <ImageView
             android:id="@+id/imageView_automovil"
