--- a/Android/app/src/main/res/layout/activity_actualizar_automovil.xml
+++ b/Android/app/src/main/res/layout/activity_actualizar_automovil.xml
@@ -39,39 +39,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
+        app:layout_constraintGuide_percent="0.28" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout5"
+    <TextView
+        android:id="@+id/edt_placa_actualizar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="8dp"
+        android:drawablePadding="5dp"
+        android:gravity="center_horizontal"
+        android:inputType="text"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4">
-
-        <EditText
-            android:id="@+id/edt_placa_actualizar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
-            android:inputType="text" />
-
-    </android.support.design.widget.TextInputLayout>
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -81,7 +75,9 @@
             android:id="@+id/edt_marca_actualizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_marca"
             android:drawablePadding="5dp"
+            android:hint="@string/edt_marca"
             android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
@@ -90,9 +86,9 @@
         android:id="@+id/textInputLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -102,7 +98,9 @@
             android:id="@+id/edt_linea_actualizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_linea"
             android:drawablePadding="5dp"
+            android:hint="@string/edt_linea"
             android:inputType="number" />
 
     </android.support.design.widget.TextInputLayout>
@@ -111,9 +109,9 @@
         android:id="@+id/textInputLayout7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -123,7 +121,9 @@
             android:id="@+id/edt_modelo_actualizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_modelo"
             android:drawablePadding="5dp"
+            android:hint="@string/edt_modelo"
             android:inputType="number" />
 
     </android.support.design.widget.TextInputLayout>
@@ -132,9 +132,9 @@
         android:id="@+id/textInputLayout6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -144,7 +144,9 @@
             android:id="@+id/edt_color_actualizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_color_coche"
             android:drawablePadding="5dp"
+            android:hint="@string/edt_color"
             android:inputType="number" />
 
     </android.support.design.widget.TextInputLayout>
@@ -154,7 +156,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85" />
+        app:layout_constraintGuide_percent="0.8" />
 
     <Button
         android:id="@+id/btn_actualizar_automovil"
@@ -167,7 +169,7 @@
         android:onClick="btn_actualizar_automovil"
         android:text="Actualizar automovil"
         android:textSize="18sp"
-        android:theme="@style/boton_principal"
+        android:theme="@style/boton_rojo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
