--- a/Android/app/src/main/res/layout/activity_actualizar_reparacion.xml
+++ b/Android/app/src/main/res/layout/activity_actualizar_reparacion.xml
@@ -39,28 +39,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
+        app:layout_constraintGuide_percent="0.25" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="16dp"
         android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4">
+        app:layout_constraintStart_toStartOf="parent">
 
         <EditText
             android:id="@+id/edt_tipo_actualizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
+            android:drawableStart="@drawable/ic_tipo_reparacion"
+            android:drawablePadding="15dp"
+            android:hint="@string/edt_tipo_reparacion"
             android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
@@ -69,8 +69,8 @@
         android:id="@+id/textInputLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,9 @@
             android:id="@+id/edt_descripcionFalla_actualizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
+            android:drawableStart="@drawable/ic_descripcion_falla"
+            android:drawablePadding="15dp"
+            android:hint="@string/edt_descripcion_falla"
             android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
@@ -90,10 +92,10 @@
         android:id="@+id/textInputLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout7"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
@@ -102,40 +104,39 @@
             android:id="@+id/edt_descripcionMantenimiento_actualizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
+            android:drawableStart="@drawable/ic_descripcion_mantenimiento"
+            android:drawablePadding="15dp"
+            android:hint="@string/edt_descripcion_mantenimiento"
             android:inputType="number" />
 
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout7"
+    <TextView
+        android:id="@+id/edt_kilometraje_actualizar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="8dp"
+        android:drawablePadding="5dp"
+        android:gravity="center_horizontal"
+        android:inputType="number"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <EditText
-            android:id="@+id/edt_kilometraje_actualizar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
-            android:inputType="number" />
-
-    </android.support.design.widget.TextInputLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
@@ -144,7 +145,9 @@
             android:id="@+id/edt_costo_actualizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
+            android:drawableStart="@drawable/ic_costo_reparacion"
+            android:drawablePadding="15dp"
+            android:hint="@string/edt_costo"
             android:inputType="number" />
 
     </android.support.design.widget.TextInputLayout>
@@ -165,9 +168,9 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
         android:onClick="btn_actualizar_reparacion"
-        android:text="Actualizar reparacion"
+        android:text="Actualizar reparación"
         android:textSize="18sp"
-        android:theme="@style/boton_principal"
+        android:theme="@style/boton_rojo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
